# pomelo-mc

./: .clang-format  CMakeLists.txt
.cache/clangd/index/: main.cpp.C793922F9B3C60A2.idx
src/: main.cpp
